--- a/web_eprotal/CSS/style.css
+++ b/web_eprotal/CSS/style.css
@@ -9,7 +9,6 @@
     transition : background 1s
 }
 
-
 .header_top .collapse .navbar-nav  li a:hover {
     color: #ffff;
     background: rgb(162, 190, 235) ;
@@ -24,8 +23,27 @@ footer {
     line-height: 50px;
 }
 
-
+/*-----Hien.Dinh-----*/
 #content {
-    min-height: 500px;
-    background-color: #4285F4;
+    min-height: 250px;
+    text-align: center;
+}
+.myclass-title{
+    color: gray;
+    margin-bottom: 50px;
+}
+.container a{
+    color: gray !important;
+}
+.container a:hover{
+    text-decoration: none !important;
+    color: black !important;
+}
+
+
+
+.jumbotron{
+    background: #4285F4 !important;
+    margin-top: 10px;
+    margin-bottom: 0px !important;
 }
